--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  font-size: 16px;
+  font-family: 'Inter';
+}
+
+ul {
+  padding-inline-start: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+/*footer*/
+.follow-us i {
+  padding: 0 5px;
+}
+
+.subscribe input {
+  padding-top: 10px;
+}
+
+.subscribe button {
+  margin-top: 20px;
+  background-color: #000;
+  color: #fff;
+}
