--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,17 @@
   <div class="container">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/shop-all">Shop All</a></li>
+      <!--dropdown-menu-start-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropbtn" routerLink="/shop-all">Shop All</a>
+        <div class="dropdown-content">
+          <a routerLink="/rings">Rings</a>
+          <a routerLink="/earrings">Earrings</a>
+          <a routerLink="/bracelets">Bracelets</a>
+          <a routerLink="/necklaces">Necklaces</a>
+        </div>
+      </li>
+      <!--dropdown-menu-start-->
       <li class="nav-item"><a class="nav-link" routerLink="/guide">Jewellery Guide</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/about-us">About us</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact</a></li>
