--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
+/*ALL*/
 * {
   font-size: 16px;
   font-family: 'Inter';
+  background-color: #FAF8F6;
 }
 
 ul {
@@ -11,9 +13,37 @@ li {
   list-style-type: none;
 }
 
-/*footer*/
+/*HEADER*/
+/*dropdown-menu-start*/
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #FAF8F6;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #fff;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/*dropdown-menu-end*/
+
+/*FOOTER*/
 .follow-us i {
-  padding: 0 5px;
+  padding-right: 10px;
 }
 
 .subscribe input {
