--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="col-2">
         <ul>
-          <li><h6>Explore</h6></li>
+          <li><h6 class="font-weight-bold">Explore</h6></li>
           <li>Home</li>
           <li>About us</li>
           <li>Jewellery guide</li>
@@ -64,7 +64,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><h6>Jewellery</h6></li>
+          <li><h6 class="font-weight-bold">Jewellery</h6></li>
           <li>Rings</li>
           <li>Earrings</li>
           <li>Bracelets</li>
@@ -73,7 +73,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><h6>More</h6></li>
+          <li><h6 class="font-weight-bold">More</h6></li>
           <li>Size guide</li>
           <li>Shipping & Returns</li>
           <li>Product care & Repair</li>
@@ -81,7 +81,7 @@
       </div>
       <div class="col-2">
         <ul class="follow-us">
-          <li><h6>Follow us</h6></li>
+          <li><h6 class="font-weight-bold">Follow us</h6></li>
           <li>
             <a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-instagram"></i></a>
@@ -90,7 +90,7 @@
         </ul>
       </div>
       <div class="col-4">
-        <h6>Subscribe to All Things AGURI</h6>
+        <h6 class="font-weight-bold">Subscribe to All Things AGURI</h6>
         <form class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
           <div><input class="col-12 border-top-0 border-left-0 border-right-0" type="email" placeholder="Email address" required></div>
           <button class="col-12 btn-sm" type="submit">Join now</button>
