--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /*ALL*/
 * {
   font-size: 16px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Merchant', sans-serif;
   background-color: #FAF8F6;
 }
 
@@ -11,6 +11,10 @@ ul {
 
 li {
   list-style-type: none;
+}
+
+h6 {
+  font-weight: 700;
 }
 
 /*HEADER*/
