--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       </div>
       <!--logo-->
       <div class="col-6 d-flex justify-content-center">
-        <img src="" alt="aguri-logo"/>
+        <img src="./assets/img/logo.svg" alt="aguri-logo"/>
       </div>
       <!--top-page-right-->
       <div class="col-3">
