--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,29 +4,29 @@
       <!--top-page-left-->
       <div class="col-3">
         <ul class="d-flex justify-content-start">
-          <li class="p-2"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-facebook"></i></a></li>
-          <li class="p-2"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-instagram"></i></a></li>
-          <li class="p-2"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-pinterest"></i></a></li>
+          <li class="p-2"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-xl fa-facebook"></i></a></li>
+          <li class="p-2"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-xl fa-instagram"></i></a></li>
+          <li class="p-2"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-xl fa-pinterest"></i></a></li>
         </ul>
       </div>
       <!--logo-->
       <div class="col-6 d-flex justify-content-center">
-        <img src="./assets/img/logo.svg" alt="aguri-logo"/>
+        <img id="logo" src="./assets/img/logo.svg" alt="aguri-logo"/>
       </div>
       <!--top-page-right-->
       <div class="col-3">
         <ul class="d-flex justify-content-end">
           <li class="p-2">Sign in</li>
-          <li class="p-2"><i class="fa fa-shopping-cart"></i></li>
-          <li class="p-2"><i class="fa fa-search"></i></li>
+          <li class="p-2"><i class="fa fa-shopping-cart fa-xl"></i></li>
+          <li class="p-2"><i class="fa fa-search fa-xl"></i></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
 
-<nav class="card-header border-0">
-  <div class="container">
+<nav>
+  <div class="container card-header border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
