--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -19,6 +19,31 @@
         <img src="./assets/img/about-us/1.png" />
       </div>
     </div>
+  </div>
 
+  <!--the-brand-->
+  <div class="the-brand row">
+    <div class="col-12">
+      <img src="./assets/img/about-us/2.png">
+    </div>
+    <div class="the-brand-text col-6">
+      <h3>The Brand</h3>
+      <p>AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+        from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
+        New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
+        ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
+        Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
+        that may otherwise be obsolete reclaimed or ethically.</p>
+    </div>
+  </div>
+
+  <!--our-vision-->
+  <div class="row">
+    <div class="col-1">
+
+    </div>
+    <div class="col-1">
+
+    </div>
   </div>
 </div>
