--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,34 @@
 /*ALL*/
 * {
+  padding: 0px;
+  margin:0px;
+}
+body{
   font-size: 16px;
+  font-weight: 400;
   font-family: 'Inter', sans-serif;
   background-color: #FAF8F6;
 }
-
-h2, h3, h4 {
+/*Typo*/
+h1{
+  font-size:90px;
+  font-weight: 600;
+}
+h2, h3, h4, h5 {
   font-family: 'Merchant', sans-serif;
+  font-weight:400;
+}
+.mdt{
+  font-weight: 500;
+  font-size: 18px;
+}
+.smt{
+  font-size: 12px;
 }
 
-.card {
 
-}
+
+
 
 ul {
   padding-inline-start: 0;
