--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -1,7 +1,7 @@
 <!--ALL CATEGORIES-->
-<div class="container">
+<div class="container all-cate">
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 cate-left">
       <ul>
         <li><a>
           <h5>Rings</h5>
@@ -20,7 +20,7 @@
         <img src="./assets/img/shop-all/cate1.png">
       </a>
     </div>
-    <div class="col-4">
+    <div class="col-4 cate-center">
       <a>
         <img src="./assets/img/shop-all/cate2.png">
       </a>
@@ -28,7 +28,7 @@
         <img src="./assets/img/shop-all/cate3.png">
       </a>
     </div>
-    <div class="col-4">
+    <div class="col-4 cate-right">
       <a>
         <img src="./assets/img/shop-all/cate4.png">
       </a>
