--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,24 +1,22 @@
 <div class="container">
   <!--introduction-->
-  <div class="card">
-    <div class="row">
-      <div class="col-5 text-center">
-        <h4>Introduction</h4>
-      </div>
-      <div class="col-7">
-        AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
-        from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
-        New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
-        ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
-        Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
-        that may otherwise be obsolete reclaimed or ethically.
-      </div>
+  <div class="row introduction">
+    <div class="col-5 text-center">
+      <h4>Introduction</h4>
     </div>
-    <div class="row">
+    <div class="col-7">
+      AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+      from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
+      New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
+      ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
+      Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
+      that may otherwise be obsolete reclaimed or ethically.
+    </div>
+  </div>
+  <div class="row">
       <div class="col">
         <img src="./assets/img/about-us/1.png" />
       </div>
-    </div>
   </div>
 
   <!--the-brand-->
@@ -26,24 +24,46 @@
     <div class="col-12">
       <img src="./assets/img/about-us/2.png">
     </div>
-    <div class="the-brand-text col-6">
+    <div class="the-brand-text col-4">
       <h3>The Brand</h3>
       <p>AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
         from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
         New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
-        ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
-        Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
-        that may otherwise be obsolete reclaimed or ethically.</p>
+        ethically mined gemstones in each piece.</p>
     </div>
   </div>
 
   <!--our-vision-->
   <div class="row">
-    <div class="col-1">
-
+    <div class="col-6">
+      <img src="./assets/img/about-us/3.png" />
     </div>
-    <div class="col-1">
+    <div class="col-6">
+      <h3>Our Vision</h3>
+      <p>Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
+        silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
+        classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
+        life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
+        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
+        genders classic silhouettes.</p>
+    </div>
+  </div>
 
+  <!--our-mission-->
+  <div class="row">
+    <div class="our-mission-text col-5">
+      <div class="col-6"><h3>Our Mission</h3></div>
+      <div class="col-6"><hr></div>
+
+      <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
+        silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
+        classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
+        life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
+        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
+        genders classic silhouettes.</p>
+    </div>
+    <div class="col-7">
+      <img src="./assets/img/about-us/4.png" />
     </div>
   </div>
 </div>
