--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
+<!--HEADER-->
 <header>
   <div class="header card-header border-0 container">
-    <div class="row">
+    <div class="row header-inner">
       <!--top-page-left-->
       <div class="col-3">
         <ul class="d-flex justify-content-start">
-          <li class="p-2"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-xl fa-facebook"></i></a></li>
-          <li class="p-2"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-xl fa-instagram"></i></a></li>
-          <li class="p-2"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-xl fa-pinterest"></i></a></li>
+          <li class="p-2"><a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-lg fa-facebook"></i></a></li>
+          <li class="p-2"><a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-lg fa-instagram"></i></a></li>
+          <li class="p-2"><a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-lg fa-pinterest"></i></a></li>
         </ul>
       </div>
       <!--logo-->
@@ -17,14 +18,14 @@
       <div class="col-3">
         <ul class="d-flex justify-content-end">
           <li class="p-2">Sign in</li>
-          <li class="p-2"><i class="fa fa-shopping-cart fa-xl"></i></li>
-          <li class="p-2"><i class="fa fa-search fa-xl"></i></li>
+          <li class="p-2"><i class="fa fa-shopping-cart fa-lg"></i></li>
+          <li class="p-2"><i class="fa fa-search fa-lg"></i></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
-
+<!--NAVBAR-->
 <nav>
   <div class="container card-header border-0">
     <ul class="nav justify-content-center">
@@ -51,12 +52,13 @@
   <router-outlet></router-outlet>
 </section>
 
+<!--FOOTER-->
 <footer>
   <div class="card-footer border-bottom-0 border-left-0 border-right-0 container">
     <div class="row">
       <div class="col-2">
         <ul>
-          <li><h6 class="font-weight-bold">Explore</h6></li>
+          <li><p class="font-weight-bold">Explore</p></li>
           <li>Home</li>
           <li>About us</li>
           <li>Jewellery guide</li>
@@ -64,7 +66,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><h6 class="font-weight-bold">Jewellery</h6></li>
+          <li><p class="font-weight-bold">Jewellery</p></li>
           <li>Rings</li>
           <li>Earrings</li>
           <li>Bracelets</li>
@@ -73,7 +75,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><h6 class="font-weight-bold">More</h6></li>
+          <li><p class="font-weight-bold">More</p></li>
           <li>Size guide</li>
           <li>Shipping & Returns</li>
           <li>Product care & Repair</li>
@@ -81,7 +83,7 @@
       </div>
       <div class="col-2">
         <ul class="follow-us">
-          <li><h6 class="font-weight-bold">Follow us</h6></li>
+          <li><p class="font-weight-bold">Follow us</p></li>
           <li>
             <a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-instagram"></i></a>
@@ -90,7 +92,7 @@
         </ul>
       </div>
       <div class="col-4">
-        <h6 class="font-weight-bold">Subscribe to All Things AGURI</h6>
+        <p class="font-weight-bold">Subscribe to All Things AGURI</p>
         <form class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
           <div><input class="col-12 border-top-0 border-left-0 border-right-0" type="email" placeholder="Email address" required></div>
           <button class="col-12 btn-sm" type="submit">Join now</button>
