--- a/src/app/pages/shop-all/shop-all.component.css
+++ b/src/app/pages/shop-all/shop-all.component.css
@@ -1,8 +1,27 @@
-.cate-left ul li{
+.cate-name ul li{
   text-align: center;
   margin-bottom:20px;
 }
-.cate ul li:nth-child(4){
+.cate-name ul li:nth-child(4){
   margin-bottom:0px;
 }
-
+.cate-bra{
+  margin-bottom:25px;
+}
+.cate-right h3{
+  padding: 62px 0px;
+}
+.cate-ring{
+  padding-bottom:25px;
+}
+.cate-neck{
+  padding-top:25px;
+}
+/*ring*/
+.cate-all{
+  margin-top:120px;
+  margin-bottom:120px;
+}
+.Ring-all h4{
+  margin-bottom:60px;
+}
