--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -1,40 +1,139 @@
 <!--ALL CATEGORIES-->
-<div class="container all-cate">
+<div class="container ctg">
   <div class="row">
     <div class="col-4 cate-left">
-      <ul>
-        <li><a>
-          <h5>Rings</h5>
-        </a></li>
-        <li><a>
-          <h5>Earrings</h5>
-        </a></li>
-        <li><a>
-          <h5>Bracelets</h5>
-        </a></li>
-        <li><a>
-          <h5>Necklaces</h5>
-        </a></li>
-      </ul>
-      <a>
-        <img src="./assets/img/shop-all/cate1.png">
-      </a>
+      <div class="cate-name">
+        <ul>
+          <li><a>
+            <h5>Rings</h5>
+          </a></li>
+          <li><a>
+            <h5>Earrings</h5>
+          </a></li>
+          <li><a>
+            <h5>Bracelets</h5>
+          </a></li>
+          <li><a>
+            <h5>Necklaces</h5>
+          </a></li>
+        </ul>
+      </div>
+      <div class="cate-neck">
+        <a href="#">
+          <img src="./assets/img/shop-all/cate1.png">
+        </a>
+      </div>
     </div>
     <div class="col-4 cate-center">
-      <a>
-        <img src="./assets/img/shop-all/cate2.png">
-      </a>
-      <a>
-        <img src="./assets/img/shop-all/cate3.png">
-      </a>
+      <div class="cate-ring">
+        <a href="#">
+          <img src="./assets/img/shop-all/cate2.png">
+        </a>
+      </div>
+      <div class="cate-earr">
+        <a href="#">
+          <img src="./assets/img/shop-all/cate3.png">
+        </a>
+      </div>
     </div>
     <div class="col-4 cate-right">
-      <a>
-        <img src="./assets/img/shop-all/cate4.png">
-      </a>
-      <h3>Auri's JewelleRy</h3>
+      <div class="cate-bra">
+        <a href="#">
+          <img src="./assets/img/shop-all/cate4.png">
+        </a>
+      </div>
+      <h3 class="text-center">Auri's JewelleRy</h3>
     </div>
   </div>
   <!--Rings-->
+  <div class="Ring-all cate-all">
+    <h4 class="text-center">Rings</h4>
+    <div class="row">
+      <div class="col-2">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all2.png">
+        </a>
+      </div>
+      <div class="col-4">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all3.png">
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all4.png">
+        </a>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all5.png">
+        </a>
+      </div>
+      <div class="col-4">
+        <div class="ring-top row">
+          <div class="col-6">
+            <a href="#">
+              <img src="./assets/img/shop-all/ring-all6.png">
+            </a>
+          </div>
+          <div class="col-6">
+            <button>Shop all</button>
+          </div>
+        </div>
+        <div class="ring-bottom">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all7.png">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Earrings-->
+  <div class="Earring-all">
+    <h4>Earrings</h4>
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-2">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+      </div>
+      <div class="col-2">
+        <div>
+          <button>Shop all</button>
+        </div>
+        <a href="#">
+          <img src="./assets/img/shop-all/ring-all1.png">
+        </a>
+      </div>
+    </div>
+  </div>
+  <!--Bracelets-->
+  <div class="Bracelet-all">
 
+  </div>
+  <!--Necklaces-->
+  <div class="Necklace-all">
+
+  </div>
 </div>
