--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -2,7 +2,7 @@
 <div class="container ctg">
   <div class="row">
     <div class="col-4 cate-left">
-      <div class="cate-name">
+      <div class="cate-name text-center">
         <ul>
           <li><a>
             <h5>Rings</h5>
@@ -18,14 +18,14 @@
           </a></li>
         </ul>
       </div>
-      <div class="cate-neck">
+      <div class="cate-neck mtp">
         <a href="#">
           <img src="./assets/img/shop-all/cate1.png">
         </a>
       </div>
     </div>
     <div class="col-4 cate-center">
-      <div class="cate-ring">
+      <div class="cate-ring mbt">
         <a href="#">
           <img src="./assets/img/shop-all/cate2.png">
         </a>
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="col-4 cate-right">
-      <div class="cate-bra">
+      <div class="cate-bra mbt">
         <a href="#">
           <img src="./assets/img/shop-all/cate4.png">
         </a>
@@ -50,38 +50,46 @@
     <h4 class="text-center">Rings</h4>
     <div class="row">
       <div class="col-2">
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all2.png">
-        </a>
+        <div class="prod-ring1 mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all1.png">
+          </a>
+        </div>
+        <div class="prod-ring2">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all2.png">
+          </a>
+        </div>
       </div>
       <div class="col-4">
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all3.png">
-        </a>
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all3.png">
+          </a>
       </div>
       <div class="col-2">
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all4.png">
-        </a>
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all5.png">
-        </a>
+        <div class="prod-ring4 mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all4.png">
+          </a>
+        </div>
+        <div class="prod-ring5">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all5.png">
+          </a>
+        </div>
       </div>
       <div class="col-4">
         <div class="ring-top row">
-          <div class="col-6">
+          <div class="col-6 prod-ring6 mbt">
             <a href="#">
               <img src="./assets/img/shop-all/ring-all6.png">
             </a>
           </div>
           <div class="col-6">
-            <button>Shop all</button>
+           shop all
           </div>
         </div>
-        <div class="ring-bottom">
+        <div class="ring-bottom prod-ring-7">
           <a href="#">
             <img src="./assets/img/shop-all/ring-all7.png">
           </a>
