--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,17 @@ a{
 a:hover{
   color:#999;
 }
+/*SPACING*/
+.mbt{
+  margin-bottom: 25px;
+}
+.mtp{
+  margin-top:25px;
+}
+/*COLOR*/
+.sub-color{
+  color:#e7e7e7;
+}
 
 /*TYPO*/
 h1{
@@ -63,7 +74,7 @@ nav a{
   font-size:16px;
 }
 nav li{
-  padding:20px 30px 20px 30px;
+  padding:25px 30px 25px 30px;
 }
 nav li:nth-child(5){
   padding-right: 0px;
