--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -78,70 +78,192 @@
           </a>
         </div>
       </div>
-      <div class="col-4">
-        <div class="ring-top row">
-          <div class="col-6 prod-ring6 mbt">
-            <a href="#">
-              <img src="./assets/img/shop-all/ring-all6.png">
-            </a>
-          </div>
-          <div class="col-6">
-           shop all
-          </div>
+      <div class="col-2">
+        <div class="prod-ring4 mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all6.png">
+          </a>
         </div>
-        <div class="ring-bottom prod-ring-7">
+        <div class="prod-ring4 mbt">
           <a href="#">
             <img src="./assets/img/shop-all/ring-all7.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="prod-ring4 mbt">
+          Shop all
+        </div>
+        <div class="prod-ring4 mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/ring-all8.png">
           </a>
         </div>
       </div>
     </div>
   </div>
   <!--Earrings-->
-  <div class="Earring-all">
-    <h4>Earrings</h4>
+  <div class="Earring-all cate-all">
+    <h4 class="text-center">Earrings</h4>
     <div class="row">
-      <div class="col-4"></div>
-      <div class="col-2">
+      <div class="col-4">
         <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
+          <img src="./assets/img/shop-all/earr-all1.png">
         </a>
       </div>
       <div class="col-2">
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all2.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all3.png">
+          </a>
+        </div>
       </div>
       <div class="col-2">
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
-        <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
-        </a>
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all4.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all5.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all6.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/earr-all7.png">
+          </a>
+        </div>
       </div>
       <div class="col-2">
         <div>
-          <button>Shop all</button>
+          Shop all
         </div>
         <a href="#">
-          <img src="./assets/img/shop-all/ring-all1.png">
+          <img src="./assets/img/shop-all/earr-all8.png">
         </a>
       </div>
     </div>
   </div>
   <!--Bracelets-->
-  <div class="Bracelet-all">
-
+  <div class="Bracelet-all cate-all">
+    <h4 class="text-center">Bracelets</h4>
+    <div class="row">
+      <div class="col-2">
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all1.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all2.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all3.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all4.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-4">
+        <a href="#">
+          <img src="./assets/img/shop-all/brac-all5.png">
+        </a>
+      </div>
+      <div class="col-2">
+        <div class="mbt">
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all6.png">
+          </a>
+        </div>
+        <div>
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all7.png">
+          </a>
+        </div>
+      </div>
+      <div class="col-2">
+        <div>Shop all</div>
+        <a href="#">
+          <img src="./assets/img/shop-all/brac-all8.png">
+        </a>
+      </div>
+    </div>
   </div>
   <!--Necklaces-->
-  <div class="Necklace-all">
-
+  <div class="Necklace-all cate-all">
+    <h4 class="text-center">Necklaces</h4>
+    <div class="Necklace-all cate-all">
+      <h4 class="text-center">Bracelets</h4>
+      <div class="row">
+        <div class="col-2">
+          <div class="mbt">
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all1.png">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all2.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="mbt">
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all3.png">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all4.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-4">
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all5.png">
+          </a>
+        </div>
+        <div class="col-2">
+          <div class="mbt">
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all6.png">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all7.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div>Shop all</div>
+          <a href="#">
+            <img src="./assets/img/shop-all/brac-all8.png">
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
