--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container about-us">
   <!--introduction-->
   <div class="row introduction">
     <div class="col-5 text-center">
