--- a/src/app/pages/shop-all/shop-all.component.css
+++ b/src/app/pages/shop-all/shop-all.component.css
@@ -1,6 +1,4 @@
-.ctg{
-  margin-top:40px;
-}
+
 /*Cate-left*/
 .cate-name ul li{
   margin-bottom:20px;
@@ -23,8 +21,9 @@
   margin-top:120px;
   margin-bottom:120px;
 }
-.Ring-all h4{
+.cate-all h4{
   margin-bottom:60px;
 }
+
 
 /*Earring*/
