--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 </header>
 <!--NAVBAR-->
 <nav>
-  <div class="container card-nav  border-0">
+  <div class="container pbt-100 mtp border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
@@ -55,6 +55,7 @@
 <!--FOOTER-->
 <footer>
   <div class="card-footer border-bottom-0 border-left-0 border-right-0 container">
+    <!--footer-main-content-->
     <div class="row">
       <div class="col-2">
         <ul>
@@ -97,6 +98,13 @@
           <div><input class="col-12 border-top-0 border-left-0 border-right-0" type="email" placeholder="Email address" required></div>
           <button class="col-12 btn-sm" type="submit">Join now</button>
         </form>
+      </div>
+    </div>
+
+    <!--copy-right-->
+    <div class="row">
+      <div class="col-12 copy-right text-center">
+        <p>© AGURI&PIJ.2022</p>
       </div>
     </div>
   </div>
