--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <!--introduction-->
-  <div class="row introduction">
+  <div class="row introduction pbt-100">
     <div class="col-5 text-center">
-      <h4>Introduction</h4>
+      <h5>Introduction</h5>
     </div>
     <div class="col-7">
       AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
@@ -13,19 +13,19 @@
       that may otherwise be obsolete reclaimed or ethically.
     </div>
   </div>
-  <div class="row">
+  <div class="row pbt-100">
       <div class="col">
         <img src="./assets/img/about-us/1.png" />
       </div>
   </div>
 
   <!--the-brand-->
-  <div class="the-brand row">
+  <div class="the-brand pbt-100 row">
     <div class="col-12">
       <img src="./assets/img/about-us/2.png">
     </div>
     <div class="the-brand-text col-4">
-      <h3>The Brand</h3>
+      <h4 class="mbt">The Brand</h4>
       <p>AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
         from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
         New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
@@ -34,12 +34,12 @@
   </div>
 
   <!--our-vision-->
-  <div class="row">
+  <div class="row pbt-100">
     <div class="col-6">
       <img src="./assets/img/about-us/3.png" />
     </div>
     <div class="col-6">
-      <h3>Our Vision</h3>
+      <h4 class="mbt">Our Vision</h4>
       <p>Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
         silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
         classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
@@ -50,9 +50,9 @@
   </div>
 
   <!--our-mission-->
-  <div class="row">
+  <div class="row pbt-100">
     <div class="our-mission-text col-5">
-      <div class="col-6"><h3>Our Mission</h3></div>
+      <div class="col-6"><h4>Our Mission</h4></div>
       <div class="col-6"><hr></div>
 
       <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
