--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,9 @@ a:hover{
 .mtp{
   margin-top:25px;
 }
+.pbt-100 {
+  padding-bottom: 100px;
+}
 /*COLOR*/
 .sub-color{
   color:#e7e7e7;
@@ -109,11 +112,6 @@ nav li:nth-child(1){
 }
 /*dropdown-menu-end*/
 
-/*NAVIGATION*/
-.card-nav {
-  padding-bottom: 100px;
-}
-
 /*FOOTER*/
 .card-footer {
   padding-top: 50px;
@@ -132,4 +130,9 @@ nav li:nth-child(1){
   margin-top: 20px;
   background-color: #000;
   color: #fff;
+}
+
+.copy-right {
+  padding: 100px 0 50px 0;
+  color: #666;
 }
