--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,16 +1,18 @@
+<!--introduction-->
 <div class="container about-us">
-  <!--introduction-->
   <div class="row introduction">
     <div class="col-5 text-center">
       <h4>Introduction</h4>
     </div>
     <div class="col-7">
-      AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
-      from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
-      New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
-      ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
-      Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
-      that may otherwise be obsolete reclaimed or ethically.
+      <p>
+        AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+        from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
+        New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
+        ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
+        Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
+        that may otherwise be obsolete reclaimed or ethically.
+      </p>
     </div>
   </div>
   <div class="row">
@@ -19,7 +21,7 @@
       </div>
   </div>
 
-  <!--the-brand-->
+<!--the-brand-->
   <div class="the-brand row">
     <div class="col-12">
       <img src="./assets/img/about-us/2.png">
@@ -32,8 +34,10 @@
         ethically mined gemstones in each piece.</p>
     </div>
   </div>
+</div>
 
-  <!--our-vision-->
+<!--our-vision-->
+<div class="vision">
   <div class="row">
     <div class="col-6">
       <img src="./assets/img/about-us/3.png" />
@@ -48,8 +52,10 @@
         genders classic silhouettes.</p>
     </div>
   </div>
+</div>
 
-  <!--our-mission-->
+<!--our-mission-->
+<div class="container mission">
   <div class="row">
     <div class="our-mission-text col-5">
       <div class="col-6"><h3>Our Mission</h3></div>
@@ -67,3 +73,5 @@
     </div>
   </div>
 </div>
+
+
