--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,7 @@
     </div>
   </div>
 </header>
+
 <!--NAVBAR-->
 <nav>
   <div class="container pbt-100 mtp border-0">
@@ -48,6 +49,7 @@
   </div>
 </nav>
 
+<!--MAIN-SECTION-->
 <section>
   <router-outlet></router-outlet>
 </section>
