--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -1,5 +1,94 @@
 <div class="container">
-  <div class="row">
+  <!--jewellery-guide-->
+  <div class="row pbt-100">
+    <div class="col-12 mbt text-center">
+      <h3 class="mbt">Jewellery Guide</h3>
+      <h5>Welcome to our jewellery guide. Rare, precious, and everlasting, jewellery are fascinating gemological
+        curiosities with a rich history.</h5>
+    </div>
+    <div class="col-12 mtp mbt">
+      <img src="./assets/img/guide/1.png" />
+    </div>
+    <div class="col-6 mtp">
+      <p>At AGURI, we offer earth-created and lab-grown diamonds. Both types are the same gemstone with identical
+        physical, chemical, and optical properties, differing only in origin. On this page, you will find information
+        about how both form and their four key characteristics—carat weight, color, clarity, and cut—that all signify
+        value. With this knowledge, you’ll be able to select the diamond that suits you best with confidence and ease.</p>
+    </div>
+  </div>
 
+  <!--natural-jewellery-->
+  <div class="row pbt-100">
+    <div class="col-5">
+      <img src="./assets/img/guide/2.png" />
+    </div>
+    <div class="col-7">
+      <h4 class="mbt">Natural Jewellery</h4>
+      <p class="mbt font-weight-bold">How Earth-Created Jewelry Are Formed</p>
+      <p>Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
+        more exact, they formed in the earth’s mantle about 90 miles below the surface under temperatures as high as
+        2000° F and a pressure of 45-60 kilobars. These extreme conditions link the diamond's atoms together in a
+        special way, creating the hardest substance on earth.</p>
+      <p>After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
+        deep-source volcanic eruptions. Diamond is the only gemstone composed of a single element, as they are
+        typically about 99.95% carbon. The other 0.05% can include one or more trace elements, which are atoms that
+        aren’t part of a diamond’s essential chemistry. Some of them influence color.The diamond’s most common shape
+        found in nature is the octahedron, composed of eight equilateral triangles, four of which meet at each vertex.
+        Cutters split the octahedron in half, resulting in two round brilliant cut diamonds.</p>
+    </div>
+  </div>
+
+  <!--lab-grown-jewellery-->
+  <div class="row pbt-100">
+    <div class="col-6">
+      <h4 class="mbt">Lab - grown Jewellery</h4>
+      <p class="mbt font-weight-bold">How Earth-Created Jewelry Are Formed</p>
+      <p>Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
+        necessary for a diamond crystal to form, replicating the earth's natural process of diamond formation.</p>
+      <p>There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
+        Chemical Vapor Deposition (CVD).An HPHT diamond starts as a small diamond seed that is placed into carbon.
+        Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
+        the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
+        carbon diamond.In the CVD method, a diamond seed is placed in carbon rich gasses that are ionized into plasma
+        using technology similar to that of microwaves and lasers. The ionization breaks the molecular bonds in the
+        gasses allowing the pure carbon to adhere to the diamond seed and slowly crystallize. This process occurs at
+        around 800 degrees Celsius.</p>
+    </div>
+    <div class="col-6">
+      <img src="./assets/img/guide/3.png" />
+    </div>
+  </div>
+
+  <!--diamond-and-4cs-->
+  <div class="row pbt-100">
+    <div class="col-2"></div>
+    <div class="col-8 text-center">
+      <h4 class="mbt">Diamond Characteristics and the 4 Cs</h4>
+      <p class="mbt">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
+        and the shape of its cut. Both types of diamonds are graded by gemological institutes following exactly the same
+        process and are cut using exactly the same standards. To help guide your process, you can learn about diamond
+        grading and certification, the 4 C’s, diamond shapes, and more, below.</p>
+    </div>
+    <div class="col-2"></div>
+
+    <!--collapse-start-->
+    <div class="col-12">
+
+    </div>
+    <!--collapse-end-->
+  </div>
+
+  <!--jewellery-insurance-->
+  <div class="row pbt-100">
+    <div class="col">
+
+    </div>
+  </div>
+
+  <!--jewellery-care-->
+  <div class="row pbt-100">
+    <div class="col">
+
+    </div>
   </div>
 </div>
