--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -32,9 +32,7 @@
       <p>After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
         deep-source volcanic eruptions. Diamond is the only gemstone composed of a single element, as they are
         typically about 99.95% carbon. The other 0.05% can include one or more trace elements, which are atoms that
-        aren’t part of a diamond’s essential chemistry. Some of them influence color.The diamond’s most common shape
-        found in nature is the octahedron, composed of eight equilateral triangles, four of which meet at each vertex.
-        Cutters split the octahedron in half, resulting in two round brilliant cut diamonds.</p>
+        aren’t part of a diamond’s essential chemistry. Some of them influence color.</p>
     </div>
   </div>
 
@@ -50,9 +48,7 @@
         Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
         the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
         carbon diamond.In the CVD method, a diamond seed is placed in carbon rich gasses that are ionized into plasma
-        using technology similar to that of microwaves and lasers. The ionization breaks the molecular bonds in the
-        gasses allowing the pure carbon to adhere to the diamond seed and slowly crystallize. This process occurs at
-        around 800 degrees Celsius.</p>
+        using technology similar to that of microwaves and lasers.</p>
     </div>
     <div class="col-6">
       <img src="./assets/img/guide/3.png" />
@@ -73,22 +69,63 @@
 
     <!--collapse-start-->
     <div class="col-12">
-
+      <h6>Jewellery Certification</h6>
+      <h6>Jewellery Carat</h6>
+      <h6>Jewellery Color</h6>
+      <h6>Jewellery Clarity</h6>
+      <h6>Jewellery Shape</h6>
     </div>
     <!--collapse-end-->
   </div>
 
   <!--jewellery-insurance-->
-  <div class="row pbt-100">
-    <div class="col">
-
+  <div class="insurance row">
+    <div class="col-3"></div>
+    <div class="col-6 text-center">
+      <h4 class="mtp mbt">Jewellery Insurance</h4>
+      <p class="mtp">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
+        With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
+        as many of our past customers have had great experiences working with them.</p>
+      <button class="btn-sm" onclick="alert('Loading...')">Read more</button>
     </div>
+    <div class="col-3"></div>
   </div>
 
   <!--jewellery-care-->
   <div class="row pbt-100">
-    <div class="col">
-
+    <div class="col-4">
+      <h4 class="mtp mbt">Jewellery Care</h4>
+      <p class="mtp mbt">Even though all plated jewellery tends to loose a little bit of the plating and colour over time,
+        there are a few things you can do to make it last longer and keep its shine.</p>
+      <img src="./assets/img/guide/4.png" />
     </div>
+    <div class="col-1"></div>
+    <div class="col-7 jewellery-care">
+      <img src="./assets/img/guide/5.png"/>
+      <p class="mtp">Jewellery: Gold plated over sterling silver or brass</p>
+      <ul>
+        <li>Keep your jewellery dry. Don't do laundry or wash dishes with it on.</li>
+        <li>Don't wear it in pool, at the spa or in a seawater.</li>
+        <li>Take it off before working out.</li>
+        <li>Keep it away from body chemistry: your perfume, lotion, hand cream etc...</li>
+        <li>Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth its all you need.</li>
+        <li>Keep it in our AGURI pouch and a box in a dry and clean environment when you don't wear it.</li>
+      </ul>
+      <p class="mtp">Jewellery: Gold plated over stainless steel</p>
+      <ul>
+        <li>Jewellery is waterproof but please keep it away from harsh or sharp objects to avoid scratching.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!--bottom-text-->
+  <div class="row pbt-100">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <h5 class="text-center">AGURI is a fine jewelry destination for memorable pieces designed and crafted in
+        New York City. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
+        production and genuine materials.</h5>
+    </div>
+    <div class="col-1"></div>
   </div>
 </div>
