--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="container about-us">
+<div class="container">
   <!--introduction-->
   <div class="row introduction pbt-100">
     <div class="col-5 text-center">
@@ -32,13 +32,16 @@
         ethically mined gemstones in each piece.</p>
     </div>
   </div>
+</div>
 
-  <!--our-vision-->
-  <div class="row pbt-100">
-    <div class="col-6">
-      <img src="./assets/img/about-us/3.png" />
-    </div>
-    <div class="col-6">
+<!--our-vision-->
+<div class="our-vision pbt-100">
+  <div class="our-vision-img">
+    <img src="./assets/img/about-us/3.png" />
+  </div>
+  <div class="row">
+    <div class="col-6"></div>
+    <div class="our-vision-text col-6">
       <h4 class="mbt">Our Vision</h4>
       <p>Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
         silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
@@ -48,13 +51,14 @@
         genders classic silhouettes.</p>
     </div>
   </div>
+</div>
 
+<div class="container">
   <!--our-mission-->
   <div class="row pbt-100">
     <div class="our-mission-text col-5">
       <div class="col-6"><h4>Our Mission</h4></div>
       <div class="col-6"><hr></div>
-
       <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
         silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
         classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
