--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -5,13 +5,32 @@
 
 .the-brand-text {
   position: absolute;
-  padding-top: 150px;
+  padding-top: 50px;
 }
+/**/
+
+/*our-vision*/
+.our-vision {
+  margin-bottom: 100px;
+}
+
+.our-vision-img {
+  width: fit-content;
+  margin: auto;
+  position: absolute;
+  z-index: -1;
+}
+
+.our-vision-text {
+  padding: 50px 200px 0 40px;
+  margin: auto 0;
+}
+
 /**/
 
 /*our mission*/
 .our-mission-text {
-  padding-top: 150px;
+  padding-top: 50px;
 }
 
 .our-mission-text-1 {
