--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,11 +54,11 @@
 
 <!--FOOTER-->
 <footer>
-  <div class="card-footer border-bottom-0 border-left-0 border-right-0 container">
-    <div class="row">
+  <div class="border-bottom-0 border-left-0 border-right-0 container">
+    <div class="card-footer row">
       <div class="col-2">
         <ul>
-          <li><p class="font-weight-bold">Explore</p></li>
+          <li><p class="mdt">Explore</p></li>
           <li>Home</li>
           <li>About us</li>
           <li>Jewellery guide</li>
@@ -66,7 +66,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><p class="font-weight-bold">Jewellery</p></li>
+          <li><p class="mdt">Jewellery</p></li>
           <li>Rings</li>
           <li>Earrings</li>
           <li>Bracelets</li>
@@ -75,7 +75,7 @@
       </div>
       <div class="col-2">
         <ul>
-          <li><p class="font-weight-bold">More</p></li>
+          <li><p class="mdt">More</p></li>
           <li>Size guide</li>
           <li>Shipping & Returns</li>
           <li>Product care & Repair</li>
@@ -83,19 +83,22 @@
       </div>
       <div class="col-2">
         <ul class="follow-us">
-          <li><p class="font-weight-bold">Follow us</p></li>
+          <li><p class="mdt">Follow us</p></li>
           <li>
-            <a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://www.facebook.com/aguri-jewellery"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href="https://www.instagram.com/aguri-jewellery"><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href="https://www.pinterest.com/aguri-jewellery"><i class="fa-brands fa-pinterest fa-lg"></i></a>
           </li>
         </ul>
       </div>
-      <div class="col-4">
-        <p class="font-weight-bold">Subscribe to All Things AGURI</p>
+      <div class="col-4 subscribe-form">
+        <p class="mdt">Subscribe to All Things AGURI</p>
         <form class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
-          <div><input class="col-12 border-top-0 border-left-0 border-right-0" type="email" placeholder="Email address" required></div>
-          <button class="col-12 btn-sm" type="submit">Join now</button>
+          <div>
+            <label>Email address</label>
+            <input class="inpu col-12 border-top-0 border-left-0 border-right-0" type="email" required>
+          </div>
+          <button class="btn btnsm btn-pri" type="submit">Join now</button>
         </form>
       </div>
     </div>
