--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -4,24 +4,31 @@
     <div class="col-4 cate-left">
       <div class="cate-name text-center">
         <ul>
-          <li><a>
+          <li><a href="#">
             <h5>Rings</h5>
           </a></li>
-          <li><a>
+          <li><a href="#">
             <h5>Earrings</h5>
           </a></li>
-          <li><a>
+          <li><a href="#">
             <h5>Bracelets</h5>
           </a></li>
-          <li><a>
+          <li><a href="#">
             <h5>Necklaces</h5>
           </a></li>
         </ul>
       </div>
       <div class="cate-neck mtp">
-        <a href="#">
-          <img src="./assets/img/shop-all/cate1.png">
-        </a>
+        <div class="categories-card">
+          <a href="#">
+            <img src="./assets/img/shop-all/cate1.png">
+          </a>
+          <div class="cate-card-name">
+            <a href="#">
+              <h5>Necklaces</h5>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="col-4 cate-center">
