--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -39,10 +39,10 @@
 <!--our-vision-->
 <div class="vision">
   <div class="row">
-    <div class="col-6">
+    <div class="col-6 vision-left">
       <img src="./assets/img/about-us/3.png" />
     </div>
-    <div class="col-6">
+    <div class="col-6 vision-right">
       <h3>Our Vision</h3>
       <p>Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
         silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
@@ -55,18 +55,18 @@
 </div>
 
 <!--our-mission-->
-<div class="container mission">
+<div class="mission">
   <div class="row">
     <div class="our-mission-text col-5">
       <div class="col-6"><h3>Our Mission</h3></div>
       <div class="col-6"><hr></div>
 
-      <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
-        silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
-        classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
-        life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
-        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
-        genders classic silhouettes.</p>
+      <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe
+        new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
+        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders
+        that breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
+        genders that breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals
+        of all genders classic silhouettes.</p>
     </div>
     <div class="col-7">
       <img src="./assets/img/about-us/4.png" />
